# speech-typer

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  config.example.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
evals/: README.md  golden_set.yaml  last_report.md  run.py
prompts/: README.md  prompt_mode_en.v1.yaml  prompt_mode_pt.v1.yaml  transcription_en.v1.yaml  transcription_pt.v1.yaml
scripts/: report.py
src/: __init__.py  app.py  main.py
src/audio/: __init__.py  recorder.py
src/commands/: __init__.py  command_handler.py
src/core/: __init__.py  config.py  metrics.py  session.py
src/input/: __init__.py  clipboard.py  hotkey_evdev.py  hotkey_x11.py  injector.py
src/text/: __init__.py  corrector.py  formatter.py  prompts.py
src/transcription/: __init__.py  groq_client.py
src/ui/: __init__.py  overlay.py  settings.py  tray.py
tests/: conftest.py  test_config.py  test_corrector.py  test_formatter.py  test_metrics.py  test_prompts.py  test_session.py
